[1.5.3.1] 加入環境變數

--- a/src/main/resources/application-docker.yaml
+++ b/src/main/resources/application-docker.yaml
@@ -12,3 +12,14 @@ solaris:
   prometheus:
     url: ${PROMETHEUS_URL}
     namespace: ${PROMETHEUS_NAMESPACE}
+#======================================================================================================================#
+# Spring
+#======================================================================================================================#
+spring: 
+  #====================================================================================================================#
+  # Data Source
+  #====================================================================================================================#  
+  datasource:    
+    url: jdbc:postgresql://${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
+    username: ${POSTGRES_USER}
+    password: ${POSTGRES_PASSWORD}
