[1.5.19.1] 單機可傳送圖片版本

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -25,6 +25,9 @@ solaris:
 #    identity: 
     login-password: P@ssw0rd
     sudo-password: P@ssw0rd
+    dn-service: iperf-svc
+    dn-socketPort: 8889
+    manage_service: mmanage-svc
   gnb:
     mcc: '208'
     mnc: '93'
