[1.5.19.2]上214測試版 (傳送圖片)

--- a/src/main/resources/application-docker.yaml
+++ b/src/main/resources/application-docker.yaml
@@ -12,6 +12,10 @@ solaris:
   prometheus:
     url: ${PROMETHEUS_URL}
     namespace: ${PROMETHEUS_NAMESPACE}
+  session:
+    dn-service: ${DN_SVC}
+    dn-socketPort: ${DN_SOCKET_PORT}
+    manage_service: ${MANAGE_SVC}
 #======================================================================================================================#
 # Spring
 #======================================================================================================================#
